--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uncommon",
+  "name": "uncommonjs",
   "version": "0.0.0",
   "description": "Merge CommonJS modules into a single file",
   "main": "index.js",
