--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "nomnom": "~1.8.0",
     "slug": "~0.5.0",
     "resolve": "~1.0.0",
-    "node-noop": "0.0.1"
+    "node-noop": "0.0.1",
+    "umd": "~2.1.0",
+    "derequire": "~1.2.0"
   },
   "devDependencies": {},
   "scripts": {
