Add wrapper option

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "author": {
     "name": "dfcreative"
   },
-  "license": "MIT",
+  "license": "unlicensed",
   "bugs": {
     "url": "https://github.com/dfcreative/uncommon/issues"
   },
