--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "uncommonjs",
+  "name": "mcjs",
   "version": "0.2.4",
-  "description": "Merge CommonJS modules into a single file with maximum possible compression",
+  "description": "Merge CommonJS modules into a single file",
   "main": "index.js",
   "directories": {
     "test": "test"
@@ -19,17 +19,17 @@
     "map-stream": "*",
     "nomnom": "*",
     "slug": "*",
-    "resolve": "~1.0.0"
+    "resolve": "^1.0.0"
   },
   "scripts": {
     "test": "mocha"
   },
   "bin": {
-    "uncommon": "bin/cmd.js"
+    "mcjs": "bin/cmd.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/dfcreative/uncommon.git"
+    "url": "git://github.com/dfcreative/mcjs.git"
   },
   "keywords": [
     "browserify",
@@ -37,16 +37,23 @@
     "build",
     "require",
     "module",
-    "commonjs"
+    "commonjs",
+    "cjs",
+    "uncommon",
+    "uncommonjs",
+    "webpack",
+    "merge modules",
+    "merge"
   ],
   "author": {
-    "name": "dfcreative"
+    "name": "Deema Ywanov",
+    "email": "dfcreative@gmail.com"
   },
   "license": "unlicensed",
   "bugs": {
-    "url": "https://github.com/dfcreative/uncommon/issues"
+    "url": "https://github.com/dfcreative/mcjs/issues"
   },
-  "homepage": "https://github.com/dfcreative/uncommon",
+  "homepage": "https://github.com/dfcreative/mcjs",
   "readmeFilename": "README.md",
   "devDependencies": {
     "mocha": "~2.0.1"
