--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "detective": "^4.3.1",
     "escodegen": "^1.8.1",
     "escope": "^3.6.0",
+    "espree": "^3.1.7",
+    "esprima": "^2.7.3",
     "map-stream": "*",
     "nomnom": "*",
     "replace-requires": "^1.0.3"
